--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>Document</title>
 </head>
 <body>
+  <aside id="timer-black"></aside>
   <article id="chessboard"></article>
+  <aside id="timer-white"></aside>
 </body>
 <script src="js/app.js" type="module"></script>
 </html>
