--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   <title>Document</title>
 </head>
 <body>
-  <aside id="timer-black"></aside>
+  <aside>
+    <div id="captures-black">
+      <div class="score"></div>
+    </div>
+    <div id="timer-black"></div>
+  </aside>
   <article id="chessboard"></article>
-  <aside id="timer-white"></aside>
+  <aside>
+    <div id="captures-white">
+      <div class="score"></div>
+    </div>
+    <div id="timer-white"></div>
+  </aside>
 </body>
 <script src="js/app.js" type="module"></script>
 </html>
