Captures now display in a nice order

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
   <aside>
     <div id="captures-black">
+      <div class="pawn"></div>
+      <div class="knight"></div>
+      <div class="bishop"></div>
+      <div class="rook"></div>
+      <div class="queen"></div>
       <div class="score"></div>
     </div>
     <div id="timer-black"></div>
@@ -16,6 +21,11 @@
   <article id="chessboard"></article>
   <aside>
     <div id="captures-white">
+      <div class="pawn"></div>
+      <div class="knight"></div>
+      <div class="bishop"></div>
+      <div class="rook"></div>
+      <div class="queen"></div>
       <div class="score"></div>
     </div>
     <div id="timer-white"></div>
