--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
+
 <body>
+  <main>
+    <aside>
+      <div id="captures-black">
+        <div class="pawn"></div>
+        <div class="knight"></div>
+        <div class="bishop"></div>
+        <div class="rook"></div>
+        <div class="queen"></div>
+        <div class="score"></div>
+      </div>
+      <div id="timer-black"></div>
+    </aside>
+    <article id="chessboard"></article>
+    <aside>
+      <div id="captures-white">
+        <div class="pawn"></div>
+        <div class="knight"></div>
+        <div class="bishop"></div>
+        <div class="rook"></div>
+        <div class="queen"></div>
+        <div class="score"></div>
+      </div>
+      <div id="timer-white"></div>
+    </aside>
+  </main>
+
   <aside>
-    <div id="captures-black">
-      <div class="pawn"></div>
-      <div class="knight"></div>
-      <div class="bishop"></div>
-      <div class="rook"></div>
-      <div class="queen"></div>
-      <div class="score"></div>
-    </div>
-    <div id="timer-black"></div>
-  </aside>
-  <article id="chessboard"></article>
-  <aside>
-    <div id="captures-white">
-      <div class="pawn"></div>
-      <div class="knight"></div>
-      <div class="bishop"></div>
-      <div class="rook"></div>
-      <div class="queen"></div>
-      <div class="score"></div>
-    </div>
-    <div id="timer-white"></div>
+    
   </aside>
 </body>
 <script src="js/app.js" type="module"></script>
+
 </html>
