Rendering moves next to board

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <main>
     <aside>
-      <div id="captures-black">
+      <div class="captures-black">
         <div class="pawn"></div>
         <div class="knight"></div>
         <div class="bishop"></div>
@@ -19,11 +19,11 @@
         <div class="queen"></div>
         <div class="score"></div>
       </div>
-      <div id="timer-black"></div>
+      <div class="timer-black"></div>
     </aside>
     <article id="chessboard"></article>
     <aside>
-      <div id="captures-white">
+      <div class="captures-white">
         <div class="pawn"></div>
         <div class="knight"></div>
         <div class="bishop"></div>
@@ -31,12 +31,12 @@
         <div class="queen"></div>
         <div class="score"></div>
       </div>
-      <div id="timer-white"></div>
+      <div class="timer-white"></div>
     </aside>
   </main>
 
   <aside>
-    
+    <div class="moveList"></div>
   </aside>
 </body>
 <script src="js/app.js" type="module"></script>
