Fixed styling issues & buttons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
   </main>
 
   <aside>
-    <div class="moveList"></div>
+    <div class="move-list"></div>
+    <div class="controls">
+      <button id="new-game">New game</button>
+      <button id="switch-side">Switch side</button>
+    </div>
   </aside>
 </body>
 <script src="js/app.js" type="module"></script>
