Added pop-up modal on game over

--- a/index.html
+++ b/index.html
@@ -21,7 +21,26 @@
         <div class="timer-black"></div>
       </aside>
 
-      <article id="chessboard"></article>
+      <article id="chessboard">
+        <div class="numbers">
+          <span data-row="0" data-col="0">1</span>
+          <span data-row="1" data-col="0">2</span>
+          <span data-row="2" data-col="0">3</span>
+          <span data-row="3" data-col="0">4</span>
+          <span data-row="4" data-col="0">5</span>
+          <span data-row="5" data-col="0">6</span>
+          <span data-row="6" data-col="0">7</span>
+          <span data-row="7" data-col="0">8</span>
+          <span data-row="0" data-col="0" class="letter">a</span>
+          <span data-row="0" data-col="1" class="letter">b</span>
+          <span data-row="0" data-col="2" class="letter">c</span>
+          <span data-row="0" data-col="3" class="letter">d</span>
+          <span data-row="0" data-col="4" class="letter">e</span>
+          <span data-row="0" data-col="5" class="letter">f</span>
+          <span data-row="0" data-col="6" class="letter">g</span>
+          <span data-row="0" data-col="7" class="letter">h</span>
+        </div>
+      </article>
 
       <aside>
         <div class="captures-white">
