--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="icon" href="public/images/pieces/white-pawn.png" type="image/x-icon">
     <title>Chess</title>
   </head>
 
@@ -22,6 +23,8 @@
       </aside>
 
       <article id="chessboard">
+        <div class="last-attack-from"></div>
+        <div class="last-attack-to"></div>
         <div class="numbers">
           <span data-row="0" data-col="0">1</span>
           <span data-row="1" data-col="0">2</span>
